@@ -1,7 +1,7 @@
 /*
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
  *
- * Copyright (c) 1997-2010 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1997-2015 Oracle and/or its affiliates. All rights reserved.
  *
  * The contents of this file are subject to the terms of either the GNU
  * General Public License Version 2 only ("GPL") or the Common Development
@@ -45,7 +45,7 @@ import com.sun.mail.iap.*;
 /**
  * Information from the APPENDUID response code
  * defined by the UIDPLUS extension -
- * <A HREF="http://www.ietf.org/rfc/rfc2359.txt">RFC 2359</A>.
+ * <A HREF="http://www.ietf.org/rfc/rfc4315.txt">RFC 4315</A>.
  *
  * @author  Bill Shannon
  */
