@@ -20,6 +20,7 @@ The following bugs have been fixed in the 1.5.4 release.
 
 K  6804	IdleManager can deadlock with frequent notifications
 K  6817	IdleManager can deadlock when connection fails
+K  6824	IMAP provider should support the MOVE extension (RFC 6851)
 
 
 		  CHANGES IN THE 1.5.3 RELEASE
